idf_component_register(
    SRCS
        "retroblue_api.cpp"
        "retroblue_backend.cpp"
        "retroblue_main.cpp"
        "retroblue_settings.cpp"
        "rbc_switch_comms.cpp"
        "rbc_switch_controller.cpp"
        "rbc_switch_core.cpp"
        "rbc_switch_input.cpp"
        "rbc_switch_reports.cpp"
        "rbc_switch_spi.cpp"
    INCLUDE_DIRS "include"
    REQUIRES
        Common
        bt
        nvs_flash
        esp_system
        driver
)
